Fix top border on mobile login

--- a/view/theme/frio/css/style.css
+++ b/view/theme/frio/css/style.css
@@ -3416,6 +3416,7 @@ section .profile-match-wrapper {
 .mod-home.is-not-singleuser nav.navbar,
 .mod-login nav.navbar {
 	background-color: transparent;
+	position: inherit;
 }
 .mod-home.is-not-singleuser #topbar-second,
 .mod-login #topbar-second {
